--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+body { background-image: url('background.png'); ... }
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 /* ══ BASE ══════════════════════════════════════════════════════════════════ */
